--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="phone">номер телефона</string>
     <string name="next">Далее</string>
     <string name="registration">Регистрация</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+    <string name="add_note">add note</string>
+    <string name="date">Дата</string>
 </resources>
